<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_world_description_ros2</name>
  <version>0.0.1</version>
  <description>
    3D models of Gazebo World for simulation from Autoware. 
  </description>
  <author email="yukky.saito@gmail.com">yukihiro saito</author>
  <maintainer email="kheo1772@gmail.com">Harderthan</maintainer>

  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
